--- a/package.json
+++ b/package.json
@@ -4,25 +4,20 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.27",
-    "expo": "^32.0.0",
-    "firebase": "^6.0.2",
-    "graphql": "^14.1.1",
-    "lottie-react-native": "^2.6.1",
-    "react": "16.5.0",
-    "react-apollo": "^2.4.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-showdown": "^0.4.0",
-    "react-navigation": "^3.2.1",
-    "react-redux": "^6.0.0",
-    "redux": "^4.0.1",
-    "styled-components": "^4.1.3"
+    "expo": "~40.0.0",
+    "expo-status-bar": "~1.0.3",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "^0.15.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
